# creddy-mcp

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  claude_desktop_config.example.json  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: keepalive.yml
eval/: eval_dataset.json  run_eval.py
sql/: schema.sql
src/creddy/: __init__.py  __main__.py  cli.py  config.py  data_loader.py  db.py  risk_model.py  server.py  sql_guard.py  tcmb.py
tests/: test_risk_model.py  test_sql_guard.py  test_tcmb.py
